# owl

./: Cargo.toml  README.md  SPEC.md  checklist.md  env.sample
.github/: read-test-failures
.github/workflows/: build-artifacts.yml  ci.yml  collect-failures.yml  release-artifacts.yml  tests-cross-platform.yml
docs/: ci-status.md  cli.md  coverage_checklist.md  overview.md
proptest-regressions/model/: filename.txt
scripts/: add-daemon.sh  com.owl.daemon.plist  configure.sh  install.sh  owld.service  remove-daemon.sh
src/: cli.rs  envcfg.rs  lib.rs  main.rs
src/daemon/: mod.rs  service.rs  watch.rs
src/fsops/: attach.rs  io_atom.rs  layout.rs
src/model/: address.rs  filename.rs  message.rs  rules.rs  settings.rs
src/ops/: install.rs
src/pipeline/: inbound.rs  outbox.rs  reconcile.rs  render.rs  smtp_in.rs
src/ruleset/: eval.rs  loader.rs
src/util/: dkim.rs  idna.rs  logging.rs  regex.rs  size.rs  time.rs  ulid.rs
tests/: integration.rs
tests/integration/: cli_commands.rs  dkim_signing.rs  import_export.rs  inbox_flow.rs  main_smoke.rs  mod.rs  outbox_retry.rs  retention.rs  routing.rs
