[package]
name = "owl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ulid = "1"
idna = "0.4"
time = { version = "0.3", features = ["macros", "parsing", "formatting", "serde"] }
walkdir = "2"
fs2 = "0.4"
notify = "6"
regex = "1"
tempfile = "3"
duct = "0.13"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
mailparse = "0.13"
ring = "0.17"
sha2 = "0.10"
base64 = "0.21"
serde_json = "1"
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }
mockall = "0.12"
proptest = "1"
serial_test = "2"

[profile.release]
lto = true
codegen-units = 1
